ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monefy-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: monefy.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: monefy-backend
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monefy-frontend
                port:
                  number: 80
